--- a/Recipes/MyCookingMaster.API.csproj
+++ b/Recipes/MyCookingMaster.API.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyCookingMaster.BL\MyCookingMaster.BL.csproj" />
     <ProjectReference Include="..\MyCookingMaster.DAL\MyCookingMaster.DAL.csproj" />
   </ItemGroup>
